adjusted gulpfile (but still needs more work to target the sass folder ONLY in the child theme directory) and added sass files I'd like to use for project

--- a/mota_photo-master/sass/custom.scss
+++ b/mota_photo-master/sass/custom.scss
@@ -13,3 +13,10 @@
 * Tags: photography, clean, elegant, responsive, two-columns, custom-background, custom-header, custom-menu, featured-images
 **/
 
+/********  Theme Name: Mota_Photo  ********/
+/**
+* IMPORT MAIN COMPONENTS
+**/
+@import 'abstracts/base/variables/_colors.scss';
+@import 'abstracts/base/components/_fonts.scss';
+@import 'abstracts/base/components/_typography.scss';
