confirmed google fonts are applied and sass files are successfully working together to produce changes in the UI through gulpfile, receiving input and exporting the output in the correct files

--- a/motaphoto/sass/custom.scss
+++ b/motaphoto/sass/custom.scss
@@ -4,3 +4,13 @@
 @import 'abstracts/base/variables/variables';
 
 @import 'abstracts/base/components/typography';
+
+// To be moved later to a separate file but it confirmed
+// that gulp is operating and having an effect
+// on the visual output of the site
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
