--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1,16 +1,3 @@
-/**
-* Theme Name: motaphoto
-* Version: 1.0
-* Author: Sierra Ripoche
-* Description: motophoto is designed as a photography portfolio theme for artist Nathalie Mota, who does event photography, portraits, and more. The theme is designed to be simple and clean, with a focus on the images. It includes a custom post type for photo galleries, and a custom taxonomy for categorizing photos. The theme is fully compatible with the site editor, and takes advantage of new design tools introduced in WordPress 6.4.
-* Tested up to: 6.5
-* Requires PHP: 7.0
-* Version: 1.1
-* License: GNU General Public License v2 or later
-* License URI: http://www.gnu.org/licenses/gpl-2.0.html
-* Text Domain: motaphoto
-* Tags: photography, clean, elegant, responsive, two-columns, custom-background, custom-header, custom-menu, featured-images
-*/
 body {
   background-color: white;
 }
@@ -79,3 +66,11 @@ h4, h5 {
   font-weight: 400;
   font-style: normal;
 }
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+/*# sourceMappingURL=custom.css.map */
