Header and footer nav menu elements styled. Needs JS and burger menu classes to toggle open mobile-nav menu

--- a/motaphoto/sass/custom.scss
+++ b/motaphoto/sass/custom.scss
@@ -12,3 +12,12 @@ li {
   padding: 0;
   margin: 0;
 }
+
+.site-main {
+  width: 90%;
+  margin: auto;
+  padding: 0;
+  @media-screen and (min-width: 1400px) {
+    margin: 0 2%;
+  }
+}
