--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -68,10 +68,260 @@ h4, h5 {
   font-style: normal;
 }
 
+/* Space Mono Fonts */
+@font-face {
+  font-family: "Space Mono";
+  src: url("Space_Mono/spacemono-bold-mota-photo-font.eot") format("eot"), url("Space_Mono/spacemono-bold-mota-photo-font.woff2") format("woff2"), url("Space_Mono/spacemono-bold-mota-photo-font.woff") format("woff"), url("Space_Mono/spacemono-bold-mota-photo-font.ttf") format("truetype"), url("Space_Mono/spacemono-bold-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Space Mono";
+  src: url("Space_Mono/spacemono-bolditalic-mota-photo-font.eot") format("eot"), url("Space_Mono/spacemono-bolditalic-mota-photo-font.woff2") format("woff2"), url("Space_Mono/spacemono-bolditalic-mota-photo-font.woff") format("woff"), url("Space_Mono/spacemono-bolditalic-mota-photo-font.ttf") format("truetype"), url("Space_Mono/spacemono-bolditalic-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Space Mono";
+  src: url("Space_Mono/spacemono-italic-mota-photo-font.eot") format("eot"), url("Space_Mono/spacemono-italic-mota-photo-font.woff2") format("woff2"), url("Space_Mono/spacemono-italic-mota-photo-font.woff") format("woff"), url("Space_Mono/spacemono-italic-mota-photo-font.ttf") format("truetype"), url("Space_Mono/spacemono-italic-mota-photo-font.svg#space_monoitalic") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Space Mono";
+  src: url("Space_Mono/spacemono-regular-mota-photo-font.eot") format("eot"), url("Space_Mono/spacemono-regular-mota-photo-font.woff2") format("woff2"), url("Space_Mono/spacemono-regular-mota-photo-font.woff") format("woff"), url("Space_Mono/spacemono-regular-mota-photo-font.ttf") format("truetype"), url("Space_Mono/spacemono-regular-mota-photo-font.svg#space_monoregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* End of Space Mono Fonts */
+/* Poppins Fonts */
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-black-mota-photo-font.eot") format("eot"), url("Poppins/poppins-black-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-black-mota-photo-font.woff") format("woff"), url("Poppins/poppins-black-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-black-mota-photo-font.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("poppins-blackitalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-blackitalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-blackitalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-blackitalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-blackitalic-mota-photo-font.svg#poppinsblack_italic") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-bold-mota-photo-font.eot") format("eot"), url("Poppins/poppins-bold-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-bold-mota-photo-font.woff") format("woff"), url("Poppins/poppins-bold-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-bold-mota-photo-font.svg#poppinsbold") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-bolditalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-bolditalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-bolditalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-bolditalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-bolditalic-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-extrabold-mota-photo-font.eot") format("eot)"), url("Poppins/poppins-extrabold-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-extrabold-mota-photo-font.woff") format("woff"), url("Poppins/poppins-extrabold-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-extrabold-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-extrabolditalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-extrabolditalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-extrabolditalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-extrabolditalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-extrabolditalic-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-extralight-mota-photo-font.eot") format("eot"), url("Poppins/poppins-extralight-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-extralight-mota-photo-font.woff") format("woff"), url("Poppins/poppins-extralight-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-extralight-mota-photo-font.svg#poppinsextralight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-extralightitalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-extralightitalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-extralightitalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-extralightitalic-mota-photo-font.ttf") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-italic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-italic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-italic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-italic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-italic-mota-photo-font.svg") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-light-mota-photo-font.eot") format("eot"), url("Poppins/poppins-light-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-light-mota-photo-font.woff") format("woff"), url("Poppins/poppins-light-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-light-mota-photo-font.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-lightitalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-lightitalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-lightitalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-lightitalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-lightitalic-mota-photo-font.svg#poppinslight_italic") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-medium-mota-photo-font.eot") format("eot"), url("Poppins/poppins-medium-mota-photo-font.eot") format("eot"), url("Poppins/poppins-medium-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-medium-mota-photo-font.woff") format("woff"), url("Poppins/poppins-medium-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-medium-mota-photo-font.svg#poppinsmedium") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-mediumitalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-mediumitalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-mediumitalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-mediumitalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-mediumitalic-mota-photo-font.svg#poppinsmedium_italic") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-regular-mota-photo-font.eot") format("eot"), url("Poppins/poppins-regular-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-regular-mota-photo-font.woff") format("woff"), url("Poppins/poppins-regular-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-regular-mota-photo-font.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-semibold-mota-photo-font.eot") format("eot"), url("Poppins/poppins-semibold-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-semibold-mota-photo-font.woff") format("woff"), url("Poppins/poppins-semibold-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-semibold-mota-photo-font.svg") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-semibolditalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-semibolditalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-semibolditalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-semibolditalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-semibolditalic-mota-photo-font.svg#poppinssemibold_italic") format("svg");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-thin-mota-photo-font.eot") format("eot"), url("Poppins/poppins-thin-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-thin-mota-photo-font.woff") format("woff"), url("Poppins/poppins-thin-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-thin-mota-photo-font.svg#poppinsthin") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins/poppins-thinitalic-mota-photo-font.eot") format("eot"), url("Poppins/poppins-thinitalic-mota-photo-font.woff2") format("woff2"), url("Poppins/poppins-thinitalic-mota-photo-font.woff") format("woff"), url("Poppins/poppins-thinitalic-mota-photo-font.ttf") format("truetype"), url("Poppins/poppins-thinitalic-mota-photo-font.svg") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+/* End of Poppins Fonts */
+#masthead {
+  height: 80px;
+  background-color: white;
+  box-sizing: border-box;
+}
+
+.site-header {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  align-items: center;
+}
+
+.site-branding {
+  width: 45%;
+  margin-left: 20px;
+}
+.site-branding .logo-container {
+  width: 80%;
+  flex-grow: 1;
+  margin: 0 20px;
+}
+
+.custom-logo-link {
+  display: inline-block;
+}
+.custom-logo-link img {
+  width: 65%;
+  height: auto;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  overflow: none;
+}
+.header-nav #main-menu {
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  box-sizing: border-box;
+}
+.header-nav #main-menu li {
+  margin: 0 10px;
+  flex-shrink: 1;
+}
+.header-nav #main-menu li a {
+  font-size: calc(10px + 1vw);
+  font-weight: 400;
+  text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+  line-height: 80px;
+  text-align: center;
+}
+.header-nav #main-menu li a:hover {
+  font-weight: 700;
+}
+.header-nav .burger {
+  display: none;
+}
+
+.footer-nav {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+  height: 80px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.footer-nav #footer-menu {
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  display: flex;
+  align-self: center;
+}
+.footer-nav #footer-menu li {
+  margin: 0 40px;
+  text-align: center;
+}
+.footer-nav #footer-menu li a {
+  font-size: 1em;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+  line-height: 20px;
+}
+.footer-nav #footer-menu li a:hover {
+  font-weight: 700;
+}
+
+a,
+ul,
+li {
+  list-style-type: none;
+  text-decoration: none;
+  color: black;
+}
+
 ul,
 li {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.site-main {
+  width: 90%;
+  margin: auto;
+  padding: 0;
+}
+@media-screen and (min-width: 1400px) {
+  .site-main {
+    margin: 0 2%;
+  }
 }
 /*# sourceMappingURL=custom.css.map */
