--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -204,190 +204,172 @@ h4, h5 {
   font-style: italic;
 }
 /* End of Poppins Fonts */
-a,
 ul,
-li {
+li,
+a {
+  margin: 0;
+  padding: 0;
+  list-style: none;
   text-decoration: none;
 }
 
 #masthead {
   height: 80px;
-  background-color: white;
-  width: 100%;
-  margin: 0;
-}
-
-.nav-menu {
-  height: 100%;
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
   width: 100%;
 }
 
-.site-branding {
-  width: 30%;
-}
-.site-branding .logo-container {
-  margin: 0 20px;
-}
-
-.custom-logo-link {
-  display: inline-block;
-}
-.custom-logo-link img {
-  max-width: 250px;
-  height: auto;
-}
-
-nav#main-menu {
-  display: inline-block;
-  margin-right: 20px;
-  width: 60%;
-}
-nav#main-menu #primary-menu {
-  width: 100%;
-  justify-content: space-evenly;
+.site-header {
+  position: relative;
   display: flex;
-  gap: 10px;
-  overflow: hidden;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
 }
-nav#main-menu #primary-menu .menu-item {
-  flex-shrink: 1;
+
+.logo-container {
+  flex-shrink: 0;
+  max-width: 40%;
+  margin-left: 20px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.logo-container .custom-logo-link {
+  height: auto;
+  width: auto;
+  max-width: 200px;
+  display: flex;
+  align-items: center;
+}
+.logo-container .custom-logo-link img {
+  width: 100%;
+  height: 100%;
+}
+
+.main-navigation {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  max-width: 60%;
+}
+.main-navigation #primary-menu {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.burger-btn {
+  display: none;
+}
+
+.btn-close {
+  display: none;
+}
+
+.primary-menu {
+  list-style: none;
+  display: flex;
+  margin: 0 10px;
+  padding: 10px;
+}
+.primary-menu li {
+  margin: 0 15px;
   min-width: fit-content;
-  flex-wrap: nowrap;
-  padding: 0 10px;
 }
-nav#main-menu #primary-menu .menu-item a {
-  font-size: 1em;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: black;
+.primary-menu li a {
   text-decoration: none;
-  line-height: 80px;
-  text-align: center;
+  padding: 10px;
+  display: block;
 }
-nav#main-menu #primary-menu .menu-item a:hover {
+.primary-menu li a:hover, .primary-menu li a:focus {
+  font-weight: 700;
+}
+.primary-menu .toggled {
+  display: block;
+}
+
+div.mobile-menu-container {
+  display: none;
+}
+div.mobile-menu-container button.burger-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: center;
+  width: 25px;
+  height: 20px;
+  background: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+div.mobile-menu-container button.burger-btn span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  justify-content: center;
+}
+
+.footer-nav {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+}
+.footer-nav ul {
+  display: flex;
+  flex-shrink: 1;
+  margin: 0 auto;
+}
+.footer-nav ul li {
+  margin: 0 15px;
+  min-width: fit-content;
+}
+.footer-nav ul li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  display: block;
+}
+.footer-nav ul li a:hover, .footer-nav ul li a:focus {
   font-weight: 700;
 }
 
-.burger {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  cursor: pointer;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-}
-.burger span {
-  width: 30px;
-  height: 3px;
-  background-color: black;
-  margin: 2px 0;
-  display: block;
-  transition: all 0.3s ease;
-}
-
-.burger span:nth-of-type(1) {
-  width: 30px;
-  height: 3px;
-  background-color: black;
-  margin: 2px 0;
-  display: block;
-}
-
-.burger span:nth-of-type(2) {
-  width: 30px;
-  height: 3px;
-  background-color: black;
-  margin: 2px 0;
-  display: block;
-}
-
-.burger span:nth-of-type(3) {
-  width: 30px;
-  height: 3px;
-  background-color: black;
-  margin: 2px 0;
-  display: block;
-}
-
-.mobile-menu {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 80px;
-  width: 100%;
-  z-index: 100;
-  transition: all 0.3s ease;
-}
-.mobile-menu > .mobile-header {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  margin: 0;
-}
-.mobile-menu > .mobile-menu-container {
-  display: none;
-}
-.mobile-menu > .mobile-menu-container .mobile-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 20vh;
-}
-.mobile-menu > .mobile-menu-container .mobile-nav li {
-  margin: 6% 0;
-}
-.mobile-menu > .mobile-menu-container .mobile-nav li a {
-  font-size: 1.5em;
-  line-height: 60px;
-}
-
-.mobile-menu.open {
-  display: flex;
-}
-
-.burger.close-button span:nth-of-type(1) {
-  transform: rotate(45deg);
-  position: absolute;
-}
-
-.burger.close-button span:nth-of-type(2) {
-  opacity: 0;
-}
-
-.burger.close-button span:nth-of-type(3) {
-  transform: rotate(-45deg);
-  position: absolute;
-}
-
 @media screen and (max-width: 768px) {
-  nav#main-menu {
+  nav#header-navigation #primary-menu {
     display: none;
   }
-  .burger {
-    display: flex;
-    flex-direction: column;
+  div.mobile-menu-container {
+    display: flex !important;
     justify-content: center;
-    height: 40px;
-    width: 30px;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    max-width: fit-content;
   }
-  .mobile-menu-container.open {
-    display: block;
-    height: 100vh;
-    width: 100%;
-    background-color: red;
+  div.mobile-menu-container button.burger-btn {
+    flex-direction: column;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    cursor: pointer;
+  }
+  .footer-nav {
+    position: relative;
+    flex: 1;
+    max-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-nav #footer-menu {
+    flex-direction: column;
   }
 }
 ul,
