--- a/motaphoto/sass/components/_nav.scss
+++ b/motaphoto/sass/components/_nav.scss
@@ -1,181 +1,191 @@
-// Main Nav Link Styling
-a, 
+// Variables for easy customization
 ul,
-li {
+li,
+a {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     text-decoration: none;
 }
 
-// Header Styling
+// General styling for the header
 #masthead {
     height: 80px;
-    background-color: white;
+    position: relative;
     width: 100%;
-    margin: 0;
 }
-.nav-menu {
-    height: 100%;
-    display: inline-flex;
-    justify-content: space-between;
+.site-header {
+    position: relative;
+    display: flex;
     align-items: center;
-    width: 100%;
-}
-// Logo Styling
-.site-branding {
-    width: 30%;
-    .logo-container {
-        margin: 0 20px;
+    justify-content: space-between;
+    background-color: white;
+}   
+// Logo container styling
+.logo-container {
+    flex-shrink: 0;
+    max-width: 40%;
+    margin-left: 20px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .custom-logo-link {
+    height: auto;
+    width: auto;
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
-.custom-logo-link {
-    display: inline-block;
-    img {
-        max-width: 250px;
-        height: auto;
+// Navigation container position/width styling
+.main-navigation {
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end ;
+    max-width: 60%;
+    #primary-menu {
+        justify-content: space-between;
+        width: 100%;
     }
 }
 
-// Nav Styling
-nav#main-menu {
-    display: inline-block;
-    margin-right: 20px;
-    width: 60%;
-    #primary-menu {
-        width: 100%;
-        justify-content: space-evenly;
+// Burger button styling
+.burger-btn {
+    display: none; // Hidden by default
+}
+
+.btn-close {
+    display: none;
+}
+
+// Main menu styling
+.primary-menu {
+    list-style: none;
+    display: flex;
+    margin: 0 10px;
+    padding: 10px;
+
+    li {
+        margin: 0 15px;
+        min-width: fit-content;
+
+        a {
+            text-decoration: none;
+            padding: 10px;
+            display: block;
+
+            &:hover,
+            &:focus {
+                font-weight: 700;
+            }
+        }
+    }
+    .toggled {
+        display: block;
+    }
+}
+
+ // Mobile menu container styling
+div.mobile-menu-container {
+    display: none; // Hidden by default on desktop
+    
+    
+    button.burger-btn {
+        display: flex; // Hidden by default
+        flex-direction: column;
+        justify-content: space-between;
+        align-self: center;
+        width: 25px;
+        height: 20px;
+        background: transparent;
+        border: none;
+        padding: 0;
+        cursor:pointer;
+
+        span {
+            display: block;
+            width: 25px;
+            height: 3px;
+            background-color: black;
+            justify-content: center;
+
+        }
+    }
+}
+
+
+////// Footer menu styling 
+.footer-nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 80px;
+
+    ul {
         display: flex;
-        gap: 10px;
-        overflow:hidden;
-        .menu-item {
-            flex-shrink: 1;
+        flex-shrink: 1;
+        margin: 0 auto;
+        
+        li {
+            margin: 0 15px;
             min-width: fit-content;
-            flex-wrap: nowrap;
-            padding: 0 10px;
             a {
-                font-size: 1em;
-                font-weight: 400;
-                text-transform: uppercase;
-                color: black;
                 text-decoration: none;
-                line-height: 80px;
-                text-align: center;
-                &:hover {
+                color: black;
+                padding: 10px;
+                display: block;
+
+                &:hover,
+                &:focus {
                     font-weight: 700;
                 }
             }
+        
         }
     }
 }
 
-// Burger Styling
-.burger {
-    display: none; // Default state for larger screens
-    flex-direction: column;
-    justify-content: center;
-    cursor: pointer;
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
 
-    span {
-        width: 30px;
-        height: 3px;
-        background-color: black;
-        margin: 2px 0;
-        display: block;
-        transition: all 0.3s ease;
-    }
-}
-
-@for $i from 1 through 3 {
-    .burger span:nth-of-type(#{$i}) {
-        width: 30px;
-        height: 3px;
-        background-color: black;
-        margin: 2px 0;
-        display: block;
-    }
-}
-
-// Mobile Menu Styling
-.mobile-menu {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 80px;
-    width: 100%;
-    z-index: 100;
-    transition: all 0.3s ease;
-
-    > .mobile-header {
-        position: relative;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 20px;
-        margin: 0;
-    }
-
-    > .mobile-menu-container {
-        display: none;
-        .mobile-nav {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 20vh;
-            li {
-                margin: 6% 0;
-                a {
-                    font-size: 1.5em;
-                    line-height: 60px;
-                }
-            }
-        }
-    }
-}
-
-.mobile-menu.open {
-    display: flex;
-}
-
-// Transform Burger into Close Button
-.burger.close-button span:nth-of-type(1) {
-    transform: rotate(45deg);
-    position: absolute;
-}
-
-.burger.close-button span:nth-of-type(2) {
-    opacity: 0;
-}
-
-.burger.close-button span:nth-of-type(3) {
-    transform: rotate(-45deg);
-    position: absolute;
-}
-
-// Media Queries
+// Responsive styling for mobile view
 @media screen and (max-width: 768px) {
-    nav#main-menu {
-        display: none;
+    nav#header-navigation #primary-menu{
+        display: none; // Hide the main menu on mobile
     }
-    .burger {
-        display: flex;
-        flex-direction: column;
+    div.mobile-menu-container {
+        display: flex !important; // Show the mobile menu container on mobile
         justify-content: center;
-        height: 40px;
-        width: 30px;
-    }
-    .mobile-menu-container.open {
-        display: block;
-        height: 100vh;
-        width: 100%;
-        background-color: red;
+        position: relative;
+        align-content: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        max-width: fit-content;
+            button.burger-btn {
+            flex-direction: column;
+            width: 25px;
+            height: 25px;
+            position: relative;
+            cursor: pointer;
+        }
     }
 
+    .footer-nav {
+        position: relative;
+        flex: 1;
+        max-height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        #footer-menu {
+            flex-direction: column;
+        }
+    }
 }
