--- a/motaphoto/sass/components/_nav.scss
+++ b/motaphoto/sass/components/_nav.scss
@@ -6,6 +6,7 @@ a {
     padding: 0;
     list-style: none;
     text-decoration: none;
+    font-family: 'Space Mono', monospace;
     &:hover, &:focus {
         font-weight: 700;
     }
@@ -155,6 +156,7 @@ a {
 
 /* Footer menu styling */
 .footer-nav {
+    border-top: 1px solid black;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -163,7 +165,7 @@ a {
     ul {
         display: flex;
         flex-shrink: 1;
-        margin: 0 auto;
+        margin: auto;
 
         li {
             margin: 0 15px;
@@ -260,12 +262,14 @@ a {
 
     .footer-nav {
         height: auto;
+        border-top: 1px solid black;
         ul#footer-menu {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             max-height: 100px;
+            margin-top: 30px;
         }
     }
 }
