finished creating contact modal and its form elements

--- a/motaphoto/sass/components/_nav.scss
+++ b/motaphoto/sass/components/_nav.scss
@@ -30,7 +30,8 @@ a {
 .logo-container {
     flex-shrink: 0;
     max-width: 40%;
-    margin-left: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
     height: 80px;
     display: flex;
     flex-direction: column;
