--- a/motaphoto/sass/components/_contact.scss
+++ b/motaphoto/sass/components/_contact.scss
@@ -1,5 +1,3 @@
-// [contact-form-7 id="68dcfdf" title="Modal contact"]
-
 // /sass/modal.scss
 #contact-modal {
     display: none;
@@ -26,7 +24,7 @@
             width: 100%;
             justify-content: center;
             border-bottom: 5px solid #000;
-            
+
             button.btn-close {
                 display: inline-flex;
                 width: auto;
@@ -43,14 +41,15 @@
                     background-color: #000;
                     top: 50%;
                     left: 50%;
-                    transform: rotate(45deg);
+                    transform: translate(-50%, -50%) rotate(45deg);
                 }
 
                 .close-bar:nth-child(2) {
-                    transform: rotate(-45deg);
+                    transform: translate(-50%, -50%) rotate(-45deg);
                 }
 
                 &:hover {
+                    transform-origin: center;
                     transform: rotate(360deg);
                     transition: transform 0.3s ease;
                 }
@@ -79,7 +78,6 @@
             }
         }
     }
-}
     .wpcf7 {
         display: flex;
         justify-content: center;
@@ -87,12 +85,12 @@
             max-width: 70%;
             align-items: left;
             div.contact-form-entries {
-            text-align: left;
-            label{
-                line-height: 20px;
-                font-size: 14px;
-                font-weight: 500;
-            }
+                text-align: left;
+                label {
+                    line-height: 20px;
+                    font-size: 14px;
+                    font-weight: 500;
+                }
                 .wpcf7-form-control {
                     line-height: 20px;
                     width: 100%;
@@ -106,19 +104,20 @@
                 
                 p {
                     input {
-                    display: flex;
-                    justify-content: center;
-                    width: 260px;
-                    height: 50px;
-                    padding: 10px 20px;
-                    color: black;
-                    border: none;
-                    cursor: pointer;
-                    font-size: 12px;
-                    font-weight: 400;
-                    border-radius: 5px;
-                    &:hover {
-                        font-weight: 700;
+                        display: flex;
+                        justify-content: center;
+                        width: 260px;
+                        height: 50px;
+                        padding: 10px 20px;
+                        color: black;
+                        border: none;
+                        cursor: pointer;
+                        font-size: 12px;
+                        font-weight: 400;
+                        border-radius: 5px;
+                        &:hover {
+                            font-weight: 700;
+                        }
                     }
                 }
             }
