--- a/motaphoto/sass/components/_contact.scss
+++ b/motaphoto/sass/components/_contact.scss
@@ -82,7 +82,7 @@
         display: flex;
         justify-content: center;
         form.wpcf7-form {
-            max-width: 70%;
+            max-width: 100%;
             align-items: left;
             div.contact-form-entries {
                 text-align: left;
@@ -91,9 +91,14 @@
                     font-size: 14px;
                     font-weight: 500;
                 }
-                .wpcf7-form-control {
+                input.wpcf7-form-control {
                     line-height: 20px;
+                    height: 40px;
                     width: 100%;
+                }
+                textarea {
+                    width: 100%;
+                    height: 200px;
                 }
             }
             div.contact-form-button {
