--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -205,23 +205,37 @@ h4, h5 {
 }
 /* End of Poppins Fonts */
 /* Navigation styling for the header and footer navbars and menus */
-ul,
-li,
-a {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
-  font-family: "Space Mono", monospace;
+/* Navigation styling */
+.main-navigation {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  max-width: 60%;
+  position: relative;
 }
-ul:hover, ul:focus,
-li:hover,
-li:focus,
-a:hover,
-a:focus {
-  font-weight: 700;
+.main-navigation ul#primary-menu {
+  justify-content: flex-end;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.main-navigation ul#primary-menu li {
+  margin: 0 30px;
+  min-width: fit-content;
+}
+.main-navigation ul#primary-menu li a {
+  padding: 10px;
+  display: block;
 }
 
+/* Responsive styling */
+@media screen and (max-width: 768px) {
+  .main-navigation #primary-menu {
+    display: none;
+  }
+}
 /* General styling for the header */
 #masthead {
   height: 80px;
@@ -258,31 +272,6 @@ a:focus {
 .logo-container .custom-logo-link img {
   width: 100%;
   height: 100%;
-}
-
-/* Navigation styling */
-.main-navigation {
-  flex-grow: 1;
-  display: flex;
-  justify-content: flex-end;
-  max-width: 60%;
-  position: relative;
-}
-.main-navigation #primary-menu {
-  justify-content: flex-end;
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-.main-navigation #primary-menu li {
-  margin: 0 30px;
-  min-width: fit-content;
-}
-.main-navigation #primary-menu li a {
-  padding: 10px;
-  display: block;
 }
 
 /* Burger button styling */
@@ -349,38 +338,7 @@ a:focus {
   font-weight: 700;
 }
 
-/* Footer menu styling */
-.footer-nav {
-  border-top: 1px solid black;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 80px;
-}
-.footer-nav ul {
-  display: flex;
-  flex-shrink: 1;
-  margin: auto;
-}
-.footer-nav ul li {
-  margin: 0 15px;
-  min-width: fit-content;
-}
-.footer-nav ul li a {
-  text-decoration: none;
-  color: black;
-  padding: 10px;
-  display: block;
-}
-.footer-nav ul li a:hover, .footer-nav ul li a:focus {
-  font-weight: 700;
-}
-
-/* Responsive styling */
 @media screen and (max-width: 768px) {
-  .main-navigation #primary-menu {
-    display: none;
-  }
   .mobile-menu-container {
     display: flex;
     justify-content: center;
@@ -434,18 +392,6 @@ a:focus {
   }
   .burger-btn.btn-close span:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -5px);
-  }
-  .footer-nav {
-    height: auto;
-    border-top: 1px solid black;
-  }
-  .footer-nav ul#footer-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 100px;
-    margin-top: 30px;
   }
 }
 #contact-modal {
@@ -537,12 +483,14 @@ a:focus {
 }
 #contact-modal .wpcf7 form.wpcf7-form div.contact-form-entries input.wpcf7-form-control {
   line-height: 20px;
+  font-size: 14px;
   height: 40px;
   width: 100%;
 }
 #contact-modal .wpcf7 form.wpcf7-form div.contact-form-entries textarea {
   width: 100%;
   height: 200px;
+  font-size: 14px;
 }
 #contact-modal .wpcf7 form.wpcf7-form div.contact-form-button {
   display: flex;
@@ -567,11 +515,89 @@ a:focus {
   font-weight: 700;
 }
 
+/* Footer menu styling */
+.footer-nav {
+  border-top: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+}
+.footer-nav ul#footer-menu {
+  display: flex;
+  flex-shrink: 1;
+  margin: auto;
+}
+.footer-nav ul#footer-menu li {
+  margin: 0 15px;
+  min-width: fit-content;
+}
+.footer-nav ul#footer-menu li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  display: block;
+}
+.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
+  font-weight: 700;
+}
+
+/* Responsive styling */
+@media screen and (max-width: 768px) {
+  .footer-nav {
+    height: auto;
+    border-top: 1px solid black;
+  }
+  .footer-nav ul#footer-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-height: 100px;
+    margin-top: 30px;
+  }
+}
+section#hero-header {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-height: 800px;
+  margin-bottom: 50px;
+  padding: 0;
+  object-fit: contain;
+}
+section#hero-header .hero-banner {
+  display: flex;
+  justify-content: center;
+  object-fit: contain;
+}
+section#hero-header .hero-banner img {
+  width: 100%;
+  height: auto;
+  max-height: 800px;
+  object-fit: cover;
+}
+
+section {
+  margin-bottom: 100px;
+}
+
 ul,
-li {
+li,
+a {
   list-style: none;
+  text-decoration: none;
+  font-family: "Space Mono", monospace;
   padding: 0;
   margin: 0;
+}
+ul:hover, ul:focus,
+li:hover,
+li:focus,
+a:hover,
+a:focus {
+  font-weight: 700;
 }
 
 .site-main {
