--- a/motaphoto/sass/components/_nav.scss
+++ b/motaphoto/sass/components/_nav.scss
@@ -1,56 +1,5 @@
 /* Navigation styling for the header and footer navbars and menus */
-ul,
-li,
-a {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Space Mono', monospace;
-    &:hover, &:focus {
-        font-weight: 700;
-    }
-}
 
-/* General styling for the header */
-#masthead {
-    height: 80px;
-    position: relative;
-    width: 100%;
-}
-
-.site-header {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-}
-
-.logo-container {
-    flex-shrink: 0;
-    max-width: 40%;
-    margin-left: 50px;
-    margin-right: 50px;
-    height: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    .custom-logo-link {
-        height: auto;
-        width: auto;
-        max-width: 200px;
-        display: flex;
-        align-items: center;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
 
 /* Navigation styling */
 .main-navigation {
@@ -59,7 +8,7 @@ a {
     justify-content: flex-end;
     max-width: 60%;
     position: relative;
-    #primary-menu {
+    ul#primary-menu {
         justify-content: flex-end;
         width: 50%;
         height: 100%;
@@ -79,198 +28,10 @@ a {
 }
 
 
-/* Burger button styling */
-.burger-btn {
-    flex-direction: column;
-    justify-content: space-between;
-    width: 25px;
-    height: 20px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    display: none; /* Hidden by default */
-
-    span {
-        display: block;
-        width: 25px;
-        height: 3px;
-        background-color: black;
-        transition: all 0.3s ease;
-    }
-
-    &.btn-close {
-        span {
-            &:nth-child(1) {
-                transform: rotate(45deg) translate(5px, 5px);
-            }
-            &:nth-child(2) {
-                opacity: 0;
-            }
-            &:nth-child(3) {
-                transform: rotate(-45deg) translate(5px, -5px);
-            }
-        }
-    }
-}
-
-/* Mobile menu styling */
-.mobile-menu {
-    display: none;
-    position: fixed;
-    top: 80px;
-    left: 0;
-    width: 100%;
-    height: calc(100vh - 80px);
-    background-color: white;
-    z-index: 1000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-
-    &.open {
-        display: block;
-    }
-
-    ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-
-        li {
-            margin: 10px 0;
-
-            a {
-                text-decoration: none;
-                color: black;
-                padding: 10px;
-                display: block;
-
-                &:hover,
-                &:focus {
-                    font-weight: 700;
-                }
-            }
-        }
-    }
-}
-
-/* Footer menu styling */
-.footer-nav {
-    border-top: 1px solid black;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    height: 80px;
-
-    ul {
-        display: flex;
-        flex-shrink: 1;
-        margin: auto;
-
-        li {
-            margin: 0 15px;
-            min-width: fit-content;
-
-            a {
-                text-decoration: none;
-                color: black;
-                padding: 10px;
-                display: block;
-
-                &:hover,
-                &:focus {
-                    font-weight: 700;
-                }
-            }
-        }
-    }
-}
-
 
 /* Responsive styling */
 @media screen and (max-width: 768px) {
     .main-navigation #primary-menu {
         display: none; // Hide the main menu on mobile
-    }
-
-    .mobile-menu-container {
-        display: flex; // Show the mobile menu container on mobile
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-    }
-
-    .mobile-menu {
-        position: fixed;
-        width: 100%;
-        margin-top: 40px;
-        background-color:#E00000;
-        height: 90vh;
-        &.open {
-            .menu-menu-principal-container{
-                width: 100%;
-                height: 80%;
-                margin: 0;
-                padding: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .primary-menu {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                height: 50%;
-                
-                li {
-                    margin: 10px 0;
-                    a {
-                        text-decoration: none;
-                        color: white;
-                        padding: 10px;
-                        font-size: 1.5rem;
-                        display: block;
-                        font-family: Space-Mono, monospace;
-                        &:hover,
-                        &:focus {
-                            font-weight: 700;
-                        }
-                    }
-                
-                }
-            }
-        }
-    }
-
-
-    .burger-btn {
-        display: flex; // Show the burger button on mobile
-        &.btn-close {
-            span {
-                &:nth-child(1) {
-                    transform: rotate(45deg) translate(5px, 5px);
-                }
-                &:nth-child(2) {
-                    opacity: 0;
-                }
-                &:nth-child(3) {
-                    transform: rotate(-45deg) translate(5px, -5px);
-                }
-            }
-        }
-    }
-
-    .footer-nav {
-        height: auto;
-        border-top: 1px solid black;
-        ul#footer-menu {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            max-height: 100px;
-            margin-top: 30px;
-        }
     }
 }
