--- a/motaphoto/sass/layout/_contact.scss
+++ b/motaphoto/sass/layout/_contact.scss
@@ -93,12 +93,14 @@
                 }
                 input.wpcf7-form-control {
                     line-height: 20px;
+                    font-size: 14px;
                     height: 40px;
                     width: 100%;
                 }
                 textarea {
                     width: 100%;
                     height: 200px;
+                    font-size: 14px;
                 }
             }
             div.contact-form-button {
