adjusted font-family name to match typography stylesheet

--- a/motaphoto/sass/base/_fonts.scss
+++ b/motaphoto/sass/base/_fonts.scss
@@ -1,7 +1,7 @@
 /* Space Mono Fonts */
 
 @font-face {
-    font-family: 'Space Mono', monospace;
+    font-family: 'Space-Mono', monospace;
     src: 
         url('../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2') format('woff2'),
@@ -13,7 +13,7 @@
     }
 
 @font-face {
-    font-family: 'Space Mono', ;
+    font-family: 'Space-Mono', monospace ;
     src:
         url('../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.eot') format('eot'), 
         url('../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff2') format('woff2'),
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-    font-family: 'Space Mono';
+    font-family: 'Space-Mono', monospace;
     src: 
         url('../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff2') format('woff2'),
@@ -38,7 +38,7 @@
 }
 
 @font-face {
-    font-family: 'Space Mono';
+    font-family: 'Space-Mono', monospace;
     src: 
         url('../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff2') format('woff2'),
