--- a/motaphoto/sass/base/_colors.scss
+++ b/motaphoto/sass/base/_colors.scss
@@ -2,9 +2,9 @@ $colors: (
   "primary-dark-red": #E00000,
   "primary-light-red": #FE5858,
   "primary-light-pink": #FFD6D6,
-  "secondary-black": #000000,
+  "primary-font-color--black": #000000,
   "secondary-dark-blue": #313144,
   "secondary-dark-grey": #C4C4C4,
-  "tertiary-medium-grey": #D8D8D8,
+  "btn-contact-bg-color": #D8D8D8,
   "tertiary-light-grey": #E5E5E5
 );
