--- a/motaphoto/sass/layout/_header.scss
+++ b/motaphoto/sass/layout/_header.scss
@@ -130,7 +130,7 @@
         display: flex; // Show the mobile menu container on mobile
         justify-content: center;
         align-items: center;
-        margin: 0;
+        margin-right: 20px;
     }
 
     .mobile-menu {
