--- a/motaphoto/sass/components/_buttons.scss
+++ b/motaphoto/sass/components/_buttons.scss
@@ -36,3 +36,36 @@ button.btn-cta {
         }
     }
 }
+
+
+
+div.contact-form-button {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+    width: 100%;
+    
+    p {
+        input {
+            display: flex;
+            justify-content: center;
+            width: 260px;
+            height: 50px;
+            padding: 10px 20px;
+            color: black;
+            border: none;
+            cursor: pointer;
+            font-size: 12px;
+            font-weight: 400;
+            border-radius: 5px;
+            transition: 0.4s ease scale(0);
+            &:hover {
+                font-weight: 700;
+                background-color: black;
+                color: white;
+                transform: scale(1.2);
+
+            }
+        }
+    }
+}
